// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CancellationsPolicyView/> onSubmit() should set the eligibility option to processing fulfillment and make the update request 1`] = `
<div>
  <div
    class="full-width"
  >
    <div
      class="page-header pageHeader"
    >
      <nav
        aria-label="breadcrumb"
        class=""
      >
        <ol
          class="breadcrumb"
        >
          <li
            class="breadcrumb-item"
          >
            <a
              to="/app/settings/self-service"
            >
              Self-service
            </a>
          </li>
          <li
            class="breadcrumb-item"
          >
            myStore1
          </li>
        </ol>
      </nav>
    </div>
    <nav
      class="navbar navbar"
    >
      <a
        class="link"
        data-active-class-name="active"
        data-exact="true"
        href="/app/settings/self-service/shopify/myStore1/preferences/quick-response"
      >
        Quick Response Flows
      </a>
      <a
        class="link"
        data-active-class-name="active"
        data-exact="true"
        href="/app/settings/self-service/shopify/myStore1/preferences/order-management"
      >
        Order Management Flows
      </a>
    </nav>
    <div
      class="pageContainer container-fluid"
    >
      <div
        class="row"
      >
        <div
          class="col"
        >
          <button
            class="wrapper backButton ghost secondary medium"
            type="button"
          >
            <span
              class="wrapper"
            >
              <i
                class="material-icons icon isLeft medium"
              >
                arrow_back
              </i>
              Back to Order management flows
            </span>
          </button>
          <div
            class="mb-3"
          >
            <h4
              class="cancellationsPolicyTitle"
            >
              Cancel order
            </h4>
            <p
              class="cancellationsPolicyDescription"
            >
              Allow customers to request order cancellations directly from chat and your help center. A cancellation can only be requested if the order hasn't been processed or shipped.
               
              <a
                href="https://docs.gorgias.com/en-US/self-service-portal-statuses-81862#actions-availability"
                rel="noopener noreferrer"
                target="_blank"
              >
                Read more
              </a>
            </p>
            <h5
              class="eligibilityWindowTitle"
            >
              Eligibility window
            </h5>
            <p
              class="eligibilityWindowDescription"
            >
              Customers can request a cancellation when an order meets the following criteria:
            </p>
            <form
              class=""
            >
              <div
                class="eligibilityWindowContainer"
              >
                <div
                  class="orderStatus"
                  id="order-status"
                >
                  Order status is
                </div>
                <div>
                  <div
                    class="dropdown"
                  >
                    <div
                      aria-expanded="false"
                      aria-haspopup="true"
                      class="orderStatusSelectField"
                      data-toggle="dropdown"
                    >
                      <div
                        class="select dropdown-toggle"
                      >
                        <span
                          class="label"
                          style="min-width: 10px; opacity: 1;"
                        >
                          Unfulfilled
                        </span>
                        <input
                          autocomplete="chrome-off"
                          class="input"
                          style="min-width: 10px;"
                          type="text"
                          value=""
                        />
                        <i
                          class="material-icons dropdownIcon"
                        >
                          arrow_drop_down
                        </i>
                      </div>
                    </div>
                    <div
                      aria-hidden="true"
                      class="options dropdown-menu"
                      role="menu"
                      tabindex="-1"
                    >
                      
                      <button
                        class="option option--focused dropdown-item"
                        role="menuitem"
                        tabindex="0"
                        type="button"
                      >
                        <span>
                          Processing Fulfillment
                        </span>
                      </button>
                      <button
                        class="option dropdown-item"
                        role="menuitem"
                        tabindex="0"
                        type="button"
                      >
                        <span>
                          Pending Delivery
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
                <div
                  class="deleteButton"
                >
                  <i
                    class="material-icons red mr-1"
                  >
                    clear
                  </i>
                </div>
              </div>
              <div
                class="buttonWrapper"
              >
                <button
                  class="wrapper mr-2 fill primary medium"
                  type="submit"
                >
                  Save changes
                </button>
                <button
                  class="wrapper fill secondary medium"
                  type="button"
                >
                  Cancel
                </button>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<CancellationsPolicyView/> render() should render the eligibility window option as unfulfilled 1`] = `
<div>
  <div
    class="full-width"
  >
    <div
      class="page-header pageHeader"
    >
      <nav
        aria-label="breadcrumb"
        class=""
      >
        <ol
          class="breadcrumb"
        >
          <li
            class="breadcrumb-item"
          >
            <a
              to="/app/settings/self-service"
            >
              Self-service
            </a>
          </li>
          <li
            class="breadcrumb-item"
          >
            myStore1
          </li>
        </ol>
      </nav>
    </div>
    <nav
      class="navbar navbar"
    >
      <a
        class="link"
        data-active-class-name="active"
        data-exact="true"
        href="/app/settings/self-service/shopify/myStore1/preferences/quick-response"
      >
        Quick Response Flows
      </a>
      <a
        class="link"
        data-active-class-name="active"
        data-exact="true"
        href="/app/settings/self-service/shopify/myStore1/preferences/order-management"
      >
        Order Management Flows
      </a>
    </nav>
    <div
      class="pageContainer container-fluid"
    >
      <div
        class="row"
      >
        <div
          class="col"
        >
          <button
            class="wrapper backButton ghost secondary medium"
            type="button"
          >
            <span
              class="wrapper"
            >
              <i
                class="material-icons icon isLeft medium"
              >
                arrow_back
              </i>
              Back to Order management flows
            </span>
          </button>
          <div
            class="mb-3"
          >
            <h4
              class="cancellationsPolicyTitle"
            >
              Cancel order
            </h4>
            <p
              class="cancellationsPolicyDescription"
            >
              Allow customers to request order cancellations directly from chat and your help center. A cancellation can only be requested if the order hasn't been processed or shipped.
               
              <a
                href="https://docs.gorgias.com/en-US/self-service-portal-statuses-81862#actions-availability"
                rel="noopener noreferrer"
                target="_blank"
              >
                Read more
              </a>
            </p>
            <h5
              class="eligibilityWindowTitle"
            >
              Eligibility window
            </h5>
            <p
              class="eligibilityWindowDescription"
            >
              Customers can request a cancellation when an order meets the following criteria:
            </p>
            <form
              class=""
            >
              <div
                class="eligibilityWindowContainer"
              >
                <div
                  class="orderStatus"
                  id="order-status"
                >
                  Order status is
                </div>
                <div>
                  <div
                    class="dropdown"
                  >
                    <div
                      aria-expanded="false"
                      aria-haspopup="true"
                      class="orderStatusSelectField"
                      data-toggle="dropdown"
                    >
                      <div
                        class="select dropdown-toggle"
                      >
                        <span
                          class="label"
                          style="min-width: 10px; opacity: 1;"
                        >
                          Unfulfilled
                        </span>
                        <input
                          autocomplete="chrome-off"
                          class="input"
                          style="min-width: 10px;"
                          type="text"
                          value=""
                        />
                        <i
                          class="material-icons dropdownIcon"
                        >
                          arrow_drop_down
                        </i>
                      </div>
                    </div>
                    <div
                      aria-hidden="true"
                      class="options dropdown-menu"
                      role="menu"
                      tabindex="-1"
                    >
                      
                      <button
                        class="option option--focused dropdown-item"
                        role="menuitem"
                        tabindex="0"
                        type="button"
                      >
                        <span>
                          Processing Fulfillment
                        </span>
                      </button>
                      <button
                        class="option dropdown-item"
                        role="menuitem"
                        tabindex="0"
                        type="button"
                      >
                        <span>
                          Pending Delivery
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
                <div
                  class="deleteButton"
                >
                  <i
                    class="material-icons red mr-1"
                  >
                    clear
                  </i>
                </div>
              </div>
              <div
                class="buttonWrapper"
              >
                <button
                  class="wrapper mr-2 fill primary medium"
                  type="submit"
                >
                  Save changes
                </button>
                <button
                  class="wrapper fill secondary medium"
                  type="button"
                >
                  Cancel
                </button>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<CancellationsPolicyView/> render() should render the eligibility window option as unfulfilled with SelfServiceAutomatedResponseOrderManagement flag 1`] = `
<div>
  <div
    class="full-width"
  >
    <div
      class="page-header pageHeader"
    >
      <nav
        aria-label="breadcrumb"
        class=""
      >
        <ol
          class="breadcrumb"
        >
          <li
            class="breadcrumb-item"
          >
            <a
              to="/app/settings/self-service"
            >
              Self-service
            </a>
          </li>
          <li
            class="breadcrumb-item"
          >
            myStore1
          </li>
        </ol>
      </nav>
    </div>
    <nav
      class="navbar navbar"
    >
      <a
        class="link"
        data-active-class-name="active"
        data-exact="true"
        href="/app/settings/self-service/shopify/myStore1/preferences/quick-response"
      >
        Quick Response Flows
      </a>
      <a
        class="link"
        data-active-class-name="active"
        data-exact="true"
        href="/app/settings/self-service/shopify/myStore1/preferences/order-management"
      >
        Order Management Flows
      </a>
    </nav>
    <div
      class="pageContainer container-fluid"
    >
      <div
        class="row"
      >
        <div
          class="col"
        >
          <button
            class="wrapper backButton ghost secondary medium"
            type="button"
          >
            <span
              class="wrapper"
            >
              <i
                class="material-icons icon isLeft medium"
              >
                arrow_back
              </i>
              Back to Order management flows
            </span>
          </button>
          <div
            class="mb-3"
          >
            <h4
              class="cancellationsPolicyTitle"
            >
              Cancel order
            </h4>
            <p
              class="cancellationsPolicyDescription"
            >
              Allow customers to request order cancellations directly from chat and your help center. A cancellation can only be requested if the order hasn't been processed or shipped.
               
              <a
                href="https://docs.gorgias.com/en-US/self-service-portal-statuses-81862#actions-availability"
                rel="noopener noreferrer"
                target="_blank"
              >
                Read more
              </a>
            </p>
            <h5
              class="eligibilityWindowTitle"
            >
              Eligibility window
            </h5>
            <p
              class="eligibilityWindowDescription"
            >
              Customers can request a cancellation when an order meets the following criteria:
            </p>
            <form
              class=""
            >
              <div
                class="eligibilityWindowContainer"
              >
                <div
                  class="orderStatus"
                  id="order-status"
                >
                  Order status is
                </div>
                <div>
                  <div
                    class="dropdown"
                  >
                    <div
                      aria-expanded="false"
                      aria-haspopup="true"
                      class="orderStatusSelectField"
                      data-toggle="dropdown"
                    >
                      <div
                        class="select dropdown-toggle"
                      >
                        <span
                          class="label"
                          style="min-width: 10px; opacity: 1;"
                        >
                          Unfulfilled
                        </span>
                        <input
                          autocomplete="chrome-off"
                          class="input"
                          style="min-width: 10px;"
                          type="text"
                          value=""
                        />
                        <i
                          class="material-icons dropdownIcon"
                        >
                          arrow_drop_down
                        </i>
                      </div>
                    </div>
                    <div
                      aria-hidden="true"
                      class="options dropdown-menu"
                      role="menu"
                      tabindex="-1"
                    >
                      
                      <button
                        class="option option--focused dropdown-item"
                        role="menuitem"
                        tabindex="0"
                        type="button"
                      >
                        <span>
                          Processing Fulfillment
                        </span>
                      </button>
                      <button
                        class="option dropdown-item"
                        role="menuitem"
                        tabindex="0"
                        type="button"
                      >
                        <span>
                          Pending Delivery
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
                <div
                  class="deleteButton"
                >
                  <i
                    class="material-icons red mr-1"
                  >
                    clear
                  </i>
                </div>
              </div>
              <div
                class="form-group"
              >
                <label
                  class="control-label"
                  for="responseText"
                >
                  Response text
                </label>
                <p>
                  After customers request a return in chat, reply with an automated message.
                </p>
                <div
                  class="rich-textarea-wrapper"
                >
                  <div
                    class="editor-wrapper"
                  >
                    <div
                      class="withMinHeight"
                    >
                      <div
                        class="DraftEditor-root"
                      >
                        <div
                          class="public-DraftEditorPlaceholder-root"
                        >
                          <div
                            class="public-DraftEditorPlaceholder-inner"
                            id="placeholder-someRandomKey"
                            style="white-space: pre-wrap;"
                          >
                            Ex: We offer free shipping on all U.S. orders $100+. Shipping rates vary based on weight and delivery destination and is chosen by the customer at checkout. Check out our Shipping & Returns page for more information about shipping rates.
                          </div>
                        </div>
                        <div
                          class="DraftEditor-editorContainer"
                        >
                          <div
                            aria-autocomplete="list"
                            aria-describedby="placeholder-someRandomKey"
                            aria-expanded="true"
                            class="notranslate public-DraftEditor-content"
                            contenteditable="true"
                            role="combobox"
                            spellcheck="false"
                            style="outline: none; user-select: text; white-space: pre-wrap; word-wrap: break-word;"
                          >
                            <div
                              data-contents="true"
                            >
                              <div
                                class=""
                                data-block="true"
                                data-editor="someRandomKey"
                                data-offset-key="someRandomKey-0-0"
                              >
                                <div
                                  class="public-DraftStyleDefault-block public-DraftStyleDefault-ltr"
                                  data-offset-key="someRandomKey-0-0"
                                >
                                  <span
                                    data-offset-key="someRandomKey-0-0"
                                  >
                                    <br
                                      data-text="true"
                                    />
                                  </span>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="editor-toolbar page"
                  >
                    <div
                      class="actionsWrapper"
                    >
                      <div
                        class="actions"
                      >
                        <button
                          class="wrapper button wrapper small fill secondary small"
                          id="format_bold"
                          type="button"
                        >
                          <i
                            class="material-icons icon"
                          >
                            format_bold
                          </i>
                        </button>
                        <button
                          class="wrapper button wrapper small fill secondary small"
                          id="format_italic"
                          type="button"
                        >
                          <i
                            class="material-icons icon"
                          >
                            format_italic
                          </i>
                        </button>
                        <button
                          class="wrapper button wrapper small fill secondary small"
                          id="format_underline"
                          type="button"
                        >
                          <i
                            class="material-icons icon"
                          >
                            format_underline
                          </i>
                        </button>
                        <span
                          class="popoverWrapper"
                        >
                          <button
                            class="wrapper button wrapper small fill secondary small"
                            id="insert_link"
                            type="button"
                          >
                            <i
                              class="material-icons icon"
                            >
                              link
                            </i>
                          </button>
                          <div
                            class="popover top-left hidden"
                          />
                        </span>
                        <span
                          class="popoverWrapper"
                        >
                          <button
                            class="wrapper button wrapper small fill secondary small"
                            id="insert_photo"
                            type="button"
                          >
                            <i
                              class="material-icons icon"
                            >
                              insert_photo
                            </i>
                          </button>
                          <div
                            class="popover top-left hidden"
                          />
                        </span>
                        <span
                          class="popoverWrapper"
                        >
                          <button
                            class="wrapper button wrapper small fill secondary small"
                            id="insert_emoticon"
                            type="button"
                          >
                            <i
                              class="material-icons icon"
                            >
                              insert_emoticon
                            </i>
                          </button>
                          <div
                            class="p-0 d-flex popover top-left hidden"
                          />
                        </span>
                        <span
                          class="popoverWrapper"
                        >
                          <button
                            class="wrapper button wrapper small fill secondary small"
                            id="insert_shopify_product"
                            type="button"
                          >
                            <i
                              class="material-icons icon"
                            >
                              shopify
                            </i>
                          </button>
                          <div
                            class="productLinkToolTip p-0 d-flex popover top-left hidden"
                          />
                        </span>
                      </div>
                      <div
                        class="hoverOverlay"
                      >
                        Add files as attachments
                      </div>
                    </div>
                  </div>
                </div>
                <small
                  class="form-text text-muted"
                >
                  0/1000 characters
                </small>
              </div>
              <div
                class="buttonWrapper"
              >
                <button
                  class="wrapper mr-2 fill primary medium"
                  type="submit"
                >
                  Save changes
                </button>
                <button
                  class="wrapper fill secondary medium"
                  type="button"
                >
                  Cancel
                </button>
              </div>
            </form>
          </div>
        </div>
        <div
          class="col"
          data-testid="previewColumn"
        >
          <div
            class="container"
          >
            <div
              class="mb-4 btn-group"
              role="group"
            >
              <button
                class="btn btn-secondary"
                type="button"
              >
                Landing Page
              </button>
              <button
                class="btn btn-info"
                type="button"
              >
                Message Thread
              </button>
            </div>
            <div
              class="preview"
            >
              <div
                class="dialog"
              >
                <div
                  class="header"
                  style="background-color: rgb(13, 135, 221);"
                >
                  <div
                    class="agents"
                  >
                    <div
                      class="agent first"
                      style="border-color: #0d87dd;"
                    >
                      <i
                        class="material-icons"
                      >
                        person
                      </i>
                    </div>
                    <div
                      class="agent middle"
                      style="border-color: #0d87dd;"
                    >
                      <i
                        class="material-icons"
                      >
                        person
                      </i>
                      <div
                        class="onlineMarker"
                      />
                    </div>
                    <div
                      class="agent last"
                      style="border-color: #0d87dd;"
                    >
                      <i
                        class="material-icons"
                      >
                        person
                      </i>
                    </div>
                  </div>
                  <div
                    class="details"
                  >
                    <div
                      class="appName"
                    >
                      Chat
                    </div>
                    <div
                      class="introductionText"
                    >
                      How can we help?
                    </div>
                  </div>
                </div>
                <div
                  class="poweredBy"
                >
                  <div>
                    <span>
                      Powered by
                    </span>
                    <img
                      alt="powered-by"
                      src="test-file-stub"
                    />
                  </div>
                </div>
                <div
                  class="footer"
                >
                  <div
                    class="placeholder"
                  >
                    Type a message...
                  </div>
                  <i
                    class="icon camera"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
